--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
   - "nightly"  # nightly build
 # command to install dependencies
 install:
-  - pip install -r src/requirements.txt
+  - pip install -r requirements.txt
 # command to run tests
 script:
   - cd tests
